# DAM-Alloc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: DESIGN.md
include/dam/: dam.h  dam_config.h  dam_log.h  dam_ptr.hpp  dam_stats.h
include/dam/internal/: dam_internal.h  dam_invariants.h  dam_types.h  thread.h
src/core/: core.c  dam_core.c  direct.c  general.c  small.c
src/util/: dam_util.c  thread.c  util.c
tests/: test.c  test.cpp
